# Library-Bitmap-Steganography

./: .gitignore  CMakeLists.txt  CommonFunctions.c  CommonFunctions.h  Library.h  README.md  Waterproof.c  bmp.c  bmp.h  bmpSteganography.c  bmpSteganography.conf  bmplib.c  bmplib.h  decodeStegano.c  decodeStegano.h  decodeText.c  decodeText.h  encodeStegano.c  encodeStegano.h  encodeText.c  encodeText.h  grayscale.c  grayscale.h  imageToString.c  imageToString.h  list.c  stringToImage.c  stringToImage.h
